# dockmanager

./: .version_info  AUTHORS  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
daemon/: Makefile.am  Makefile.in  abstract-tile-object.c  abstract-tile-object.vala  dbus-helper.c  dbus-helper.vala  dockmanager-common.c  dockmanager-common.vala  dockmanager-daemon.c  dockmanager-daemon.schema-ini.in  dockmanager-daemon.vala  dockmanager-settings.c  dockmanager-settings.vala  dockmanager.service.in  search-entry.c  search-entry.vala  tile-view.c  tile-view.vala  tile.c  tile.vala  wrap-label.c  wrap-label.vala
data/: Makefile.am  Makefile.in
debian/: changelog  control
debian/patches/: debian-changes-0.1.1~bzr97-0~10.04~dockers1  series
m4/: Makefile.in
metadata/: Makefile.am  Makefile.in  banshee_control.py.info  clementine_control.py.info  deluge_badge.py.info  emesene_control.py.info  gajim_badge.py.info  gnome_terminal_menus.py.info  gtg_menus.py.info  liferea_badge.py.info  mpd_control.py.info  open_terminal_here.py.info  pidgin_control.py.info  pithos_control.py.info  quicklists.py.info  rhythmbox_control.py.info  skype_control.py.info  tomboy_menus.py.info  transmission_badge.py.info  tsclient_menus.py.info  workrave_helper.py.info  zeitgeist_journal.py.info  zeitgeist_menus.py.info
po/: POTFILES.in
scripts/: Makefile.am  Makefile.in  banshee_control.py  clementine_control.py  deluge_badge.py  emesene_control.py  gajim_badge.py  gnome_terminal_menus.py  gtg_menus.py  liferea_badge.py  mpd_control.py  open_terminal_here.py  pidgin_control.py  pithos_control.py  quicklists.py  rhythmbox_control.py  skype_control.py  tomboy_menus.py  transmission_badge.py  tsclient_menus.py  workrave_helper.py  zeitgeist_journal.py  zeitgeist_menus.py
scripts/dockmanager/: Makefile.in  dockmanager.py  dockmanager.py.in
