scriptdir = $(datadir)/dockmanager/scripts

dist_script_SCRIPTS = \
	banshee_control.py	\
	clementine_control.py	\
	deluge_badge.py		\
	emesene_control.py	\
	gajim_badge.py		\
	gnome_terminal_menus.py	\
	gtg_menus.py		\
	liferea_badge.py	\
	mpd_control.py		\
	open_terminal_here.py	\
	pidgin_control.py	\
	pithos_control.py	\
	rhythmbox_control.py	\
	skype_control.py	\
	tomboy_menus.py		\
	transmission_badge.py	\
	tsclient_menus.py	\
	quicklists.py	\
	workrave_helper.py	\
	zeitgeist_menus.py	\
	zeitgeist_journal.py

SUBDIRS = \
	dockmanager
